@@ -1,10 +1,6 @@
 package random.gba.randomizer.shuffling;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
 import fedata.gba.GBAFEStatDto;
 import fedata.gba.fe6.FE6Data;
@@ -38,8 +34,8 @@ public class GBACrossGameData {
 	public int mouthY;
 
 	public GBACrossGameData(String name, String portraitPath, String description1, String description2,
-			String paletteString, GBAFEClass characterClass, int level, GBAFEStatDto bases, GBAFEStatDto growths,
-			int[] weaponRanks, int constitution, byte[] facialFeatureCoordinates) {
+							String paletteString, GBAFEClass characterClass, int level, GBAFEStatDto bases, GBAFEStatDto growths,
+							int[] weaponRanks, int constitution, byte[] facialFeatureCoordinates) {
 		this.name = name;
 		this.portraitPath = portraitPath;
 		this.description1 = description1;
@@ -114,7 +110,7 @@ public class GBACrossGameData {
 
 	/**
 	 * Double check exceptional cases after Naive search.
-	 * 
+	 *
 	 * F.e. FE8 has a bard class, but that one has no animations and as such isn't
 	 * usable (since it apparently might freeze), make sure not to give that one out
 	 * and instead give out Dancer in the fixed mapping.
@@ -123,11 +119,11 @@ public class GBACrossGameData {
 		GBAFEClass chosenClass = classOpt.get();
 		if (provider instanceof FE8Data) {
 			return (Arrays.asList(FE8Data.CharacterClass.BARD, // Lack of Magic Animations?
-					// These following female classes are too much of a pain to make work.
-					// They have the same animation as the male one anyway, don't have Promo Bonuses
-					// either.
-					FE8Data.CharacterClass.WYVERN_RIDER_F, FE8Data.CharacterClass.WYVERN_LORD_F,
-					FE8Data.CharacterClass.HERO_F, FE8Data.CharacterClass.SHAMAN_F, FE8Data.CharacterClass.DRUID_F)
+							// These following female classes are too much of a pain to make work.
+							// They have the same animation as the male one anyway, don't have Promo Bonuses
+							// either.
+							FE8Data.CharacterClass.WYVERN_RIDER_F, FE8Data.CharacterClass.WYVERN_LORD_F,
+							FE8Data.CharacterClass.HERO_F, FE8Data.CharacterClass.SHAMAN_F, FE8Data.CharacterClass.DRUID_F)
 					.contains(chosenClass));
 		} else if (provider instanceof FE7Data) {
 			return (Arrays.asList(FE7Data.CharacterClass.CAVALIER_F, // Not a useable class
@@ -231,7 +227,7 @@ public class GBACrossGameData {
 		addEntry(GameType.FE6, FE6Data.CharacterClass.HERO_F, FE7Data.CharacterClass.HERO, FE8Data.CharacterClass.HERO);
 		addEntry(GameType.FE6, FE6Data.CharacterClass.KING, FE7Data.CharacterClass.GENERAL, FE8Data.CharacterClass.GENERAL);
 		addEntry(GameType.FE6, FE6Data.CharacterClass.WYVERN_KNIGHT, FE7Data.CharacterClass.WYVERNLORD, FE8Data.CharacterClass.WYVERN_LORD);
-		
+
 		// FE7 Classes -> FE6 / FE8
 		addEntry(GameType.FE7, FE7Data.CharacterClass.LORD_LYN, FE6Data.CharacterClass.MYRMIDON_F, FE8Data.CharacterClass.MYRMIDON);
 		addEntry(GameType.FE7, FE7Data.CharacterClass.LORD_HECTOR, FE6Data.CharacterClass.KNIGHT, FE8Data.CharacterClass.KNIGHT);
@@ -270,7 +266,7 @@ public class GBACrossGameData {
 		addEntry(GameType.FE7, FE7Data.CharacterClass.WARRIOR, FE6Data.CharacterClass.WARRIOR, FE8Data.CharacterClass.WARRIOR);
 		addEntry(GameType.FE7, FE7Data.CharacterClass.WYVERNLORD_F, FE6Data.CharacterClass.WYVERN_KNIGHT_F, FE8Data.CharacterClass.WYVERN_LORD);
 		addEntry(GameType.FE7, FE7Data.CharacterClass.HERO, FE6Data.CharacterClass.HERO, FE8Data.CharacterClass.HERO);
-		
+
 		// FE8 Classes -> FE6 / FE7
 		addEntry(GameType.FE8, FE8Data.CharacterClass.FIGHTER, FE6Data.CharacterClass.FIGHTER, FE7Data.CharacterClass.FIGHTER);
 		addEntry(GameType.FE8, FE8Data.CharacterClass.TRAINEE, FE6Data.CharacterClass.FIGHTER, FE7Data.CharacterClass.FIGHTER);
@@ -302,34 +298,40 @@ public class GBACrossGameData {
 		addEntry(GameType.FE8, FE8Data.CharacterClass.ROGUE, FE6Data.CharacterClass.SWORDMASTER, FE7Data.CharacterClass.ASSASSIN);
 	}
 
-	
-	private static Map<GameType, List<GameType>> sourceGameMap = 
-			Map.of(
-					GameType.FE6, Arrays.asList(GameType.FE7, GameType.FE8), 
-					GameType.FE7, Arrays.asList(GameType.FE6, GameType.FE8), 
-					GameType.FE8, Arrays.asList(GameType.FE6, GameType.FE7)
-			); 
+
+	private static Map<GameType, List<GameType>> sourceGameMap = buildSourceGameMap();
+
+	private static Map<GameType, List<GameType>> buildSourceGameMap() {
+		Map<GameType, List<GameType>> map = new HashMap<>();
+		map.put(GameType.FE6, Arrays.asList(GameType.FE7, GameType.FE8));
+		map.put(GameType.FE7, Arrays.asList(GameType.FE6, GameType.FE8));
+		map.put(GameType.FE8, Arrays.asList(GameType.FE6, GameType.FE7));
+		return Collections.unmodifiableMap(map);
+	}
 	//@formatter:on
 
 	/**
 	 * Add an entry to the class map. the parameters must ensure that the passed to
 	 * parameters are in game order, as we will infer the target game based on the
 	 * position (using the sourceGameMap).
-	 * 
+	 *
 	 * @param sourceGame The game (of FE6,7,8) that the source class is from.
 	 * @param source     the source class to put as a key in the map
-	 * 
+	 *
 	 * @param to1        the replacement class in the first other game (f.e. if the
 	 *                   source class is FE6, this MUST be the FE7 equivalent or if
 	 *                   Source is FE7 then this is FE6)
-	 * 
+	 *
 	 * @param to2        the replacement class in the second other game (f.e. if the
 	 *                   source class is FE6, this MUST be the FE8 equivalent or if
 	 *                   Source is FE8 then this is FE7)
 	 */
 	private static void addEntry(GameType sourceGame, GBAFEClass source, GBAFEClass to1, GBAFEClass to2) {
 		List<GameType> sourceGames = sourceGameMap.get(sourceGame);
-		classMap.put(source, Map.of(sourceGames.get(0), to1, sourceGames.get(1), to2));
+		Map<GameType, GBAFEClass> inner = new HashMap<>();
+		inner.put(sourceGames.get(0), to1);
+		inner.put(sourceGames.get(1), to2);
+		classMap.put(source, Collections.unmodifiableMap(inner));
 	}
 
 }
